# kv-cache

./: .gitignore  CMakeLists.txt  README.md  get_cpu.sh  kv_cache_project_spec.md  run_bench_scaling.sh  run_bench_scaling_v2.sh  run_microbench.sh
bench/: kv_bench.cpp  kv_cache_microbench.cpp
cache/include/: kv_cache.h  logger.h  lru_list.h  protocol.h  shard.h  stats.h  tcp_server.h  ttl_sweeper.h
cache/src/: kv_cache.cpp  logger.cpp  lru_list.cpp  main.cpp  protocol.cpp  shard.cpp  stats.cpp  tcp_server.cpp  ttl_sweeper.cpp
client/: kv_cli.cpp
demo_api/: demo_cold_vs_warm.py  product_api.py  seed_db.py
